<resources>
    <string name="app_name">Africa kNow</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signin">signin</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="fullname">Fullname</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="have_an_account">Have an account?</string>
    <string name="play_game">Play Game</string>
    <string name="sign_in">Sign in</string>
    <string name="logo">logo</string>
    <string name="high_scores">High Scores</string>
    <string name="question">Question:</string>
    <string name="slash">/</string>
    <string name="score">Score:</string>
    <string name="correct">Correct:</string>
    <string name="wrong">Wrong:</string>
    <string name="_0">0</string>
    <string name="next">Next</string>
    <string name="you_have_gotten_to_the_end_of_the_demo_version_of_this_game">YOU HAVE GOTTEN TO THE END OF THE DEMO VERSION OF THIS GAME</string>
    <string name="africa_know_actual_game_promises_to_be_fun_and_challenging_cheers">Africa kNow Actual Game promises to be fun and challenging,Cheers!!!</string>
</resources>
